Force search input to be 16px on mobile to avoid zoom in on iOS

--- a/web/src/app/page.module.css
+++ b/web/src/app/page.module.css
@@ -903,6 +903,10 @@
     border-width: 3px;
   }
 
+  .searchInput {
+    font-size: 16px;
+  }
+
   .locationPanel {
     right: 0;
     width: 100%;
